@@ -1,3 +1,12 @@
+2009-10-01  Glenn Morris  <rgm@gnu.org>
+
+	* emacs-lisp/check-declare.el (check-declare-scan): Read the declaration
+	rather than parsing it as a regexp.  This relaxes the layout
+	requirements and makes errors easier to detect.
+	(check-declare-verify): Check file is regular.
+	(check-declare-directory): Doc fix.
+	* subr.el (declare-function): Doc fix.
+
 2009-10-01  Juanma Barranquero  <lekktu@gmail.com>
 
 	* cedet/semantic/wisent/javat-wy.el
